--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body style = "background:#eeeeee">
 		<center>
-			<canvas data-processing-sources="ball.pde"></canvas>
+			<canvas data-processing-sources="ball/ball.pde"></canvas>
 			<script src="processing.js"></script>
 		</center>
 	</body>
